Updated the text area

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <div id="chat_frame">
     <div class="chat__msg_list" id="chat_msg_list"></div>
     <form class="chat__form" id="chat_form">
-      <input type="text" id="chat_input_field" autocomplete="off" rows="100" minlength="0" maxlength="1024"/>
+      <textarea form="chat_file_sender" id="chat_input_field" autocomplete="off" rows="100" cols="0" maxlength="1024"></textarea>
       <button>Send</button>
       <input type="file" id="chat_file_sender" multiple/>
     </form>
